k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aiagent-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
    - host: aiagent.local
      http:
        paths:
          # Backend (FastAPI)
          # - path: /api(/|$)(.*)
          #   pathType: ImplementationSpecific
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ai-agent-backend-service
                port:
                  number: 8000
          # Frontend (React)
          # - path: /(.*)
          #   pathType: ImplementationSpecific
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-agent-frontend-service
                port:
                  number: 3000
